mini-fribidi: Squash -Werror=undef failures due to use of #if

The FriBiDi code uses #if rather than #ifdef, which pedantic compilers
warn about if the macro is undefined. The new Meson build sets
-Werror=undef, promoting these warnings to failures, and making CI
systems using certain compiler versions (in this case, Debian Jessie)
sad.

Signed-off-by: Philip Withnall <withnall@endlessm.com>

https://bugzilla.gnome.org/show_bug.cgi?id=786192